# AI-Agents-AgentsForGood-Capstone

./: README.md
CareerPath-AI/: app.py  pyproject.toml  replit.md
CareerPath-AI/attached_assets/: Pasted--Section-1-Overall-ATS-Score-div-style-display-flex-margin-bottom-1-5rem-background--1764528389179_1764528389180.txt  Pasted--div-style-margin-bottom-1-5rem-h4-style-margin-0-0-0-8rem-0-color-1f1f1f-font-size--1764527836779_1764527836780.txt  Pasted-You-are-an-expert-full-stack-AI-developer-Generate-a-production-ready-Kaggle-capstone-project-calle-1764522411208_1764522411208.txt  Pasted-import-streamlit-as-st-ats-html-div-style-display-flex-margin-bottom-1-5rem-background--1764528722399_1764528722400.txt
CareerPath-AI/utils/: __init__.py  ai_service.py  ats_scorer.py  database.py  resume_parser.py
